fix: shift and capslock script, key codes, style

--- a/RSS-Virtual-Keyboard/style.css
+++ b/RSS-Virtual-Keyboard/style.css
@@ -73,6 +73,8 @@ h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
 }
 
 .keyboard {
+    margin: 0 auto;
+    max-width: 1300px;
     display: flex;
     flex-direction: column;
     border: 3px solid rgb(16, 69, 115);
@@ -108,12 +110,13 @@ h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
 }
 
 .keyboard_key-container__extra-big-wide {
-    max-width: 150px;
+    max-width: 180px;
     width: 100%;
 }
 
 .keyboard_key-container__space {
     max-width: 485px;
+    min-width: 300px;
     width: 100%;
 }
 
